[package]
name = "torustiq-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
once_cell = "1.19.0"
torustiq-common = { path = "../../torustiq-common", features = ["module_pipeline_all"] }

[lib]
crate-type = ["cdylib"]