[package]
name = "torustiq-python"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
once_cell = "1.19.0"
pyo3 = { version = "0.22.5", features = ["auto-initialize"] }
torustiq-common = { path = "../../torustiq-common", features = ["module_pipeline_all"] }

[lib]
crate-type = ["cdylib"]