[package]
name = "torustiq-source-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
log = "0.4.21"
once_cell = "1.19.0"
tokio = "1.38.0"
torustiq-common = { path = "../../torustiq-common", features = ["module_pipeline_essentials", "export_fn__step_shutdown"] }

[lib]
crate-type = ["cdylib"]